Update Authelia Docker configuration and add configuration generation script
- Change volume mapping in docker-compose.yml to use generated configuration file
- Add generate_configuration.sh script to create the configuration file from environment variables

--- a/docker/authelia/docker-compose.yml
+++ b/docker/authelia/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: authelia
     restart: unless-stopped
     volumes:
-      - ./configuration.yml:/config/configuration.yml
+      - ./configuration.generated.yml:/config/configuration.yml
       - ./users_database.yml:/config/users_database.yml
       - ./db:/config
     ports:
