Refactor documentation and configuration for Authelia and Homepage services
- Updated Authelia configuration to include additional domain for admin access.
- Removed unnecessary volume mapping in Authelia's Docker Compose file.
- Added comprehensive README for Authelia detailing configuration, user management, and security practices.
- Introduced README for Homepage service, covering configuration, bookmark management, and customization options.
- Enhanced overall documentation structure for clarity and ease of use.

--- a/docker/authelia/configuration.yml
+++ b/docker/authelia/configuration.yml
@@ -40,6 +40,10 @@ access_control:
       policy: two_factor
       subject:
         - 'group:admins'
+    - domain: "${DOMAIN5}"
+      policy: two_factor
+      subject:
+        - 'group:admins'
   
 identity_validation:
   reset_password:
