--- a/docker/homepage/config/bookmarks.yaml
+++ b/docker/homepage/config/bookmarks.yaml
@@ -6,7 +6,7 @@
         - icon: /icons/drawio_logo.png
           href: https://app.diagrams.net
 - Job:
-    - My resume:
+    - Resume:
         - icon: /icons/hh_logo.png
           href: https://hh.ru/resume/8dd422d4ff099fcaf20039ed1f476c62464254
     - DevOps roadmap:
